--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
     "autoprefixer": "^10.4.7",
+    "firebase": "^9.9.2",
     "postcss": "^8.4.14",
     "svelte": "^3.49.0",
     "svelte-preprocess": "^4.10.7",
     "tailwindcss": "^3.1.6",
     "vite": "^3.0.0"
+  },
+  "dependencies": {
+    "chart.js": "^3.9.1",
+    "svelte-speedometer": "^1.1.0"
   }
 }
